--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QR Panda</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+  <title>QR Panda</title>  
+  <meta name="description" content="qr code generating application free">  
+  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">  
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">  
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">  
+  <link rel="mask-icon" href="/masked-icon.png" color="#FFFFFF">  
+  <meta name="theme-color" content="#ffffff">  
 </head>
 
 <body class="bg-blue-50">
