minimal pwa build

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>QR Panda</title>  
   <meta name="description" content="qr code generating application free">  
   <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+  <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body class="bg-blue-50">
