--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
   <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
   <meta name="theme-color" content="#ffffff">
+  <script>
+    if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+      document.documentElement.classList.add('dark')
+    } else {
+      document.documentElement.classList.remove('dark')
+    }
+  </script>
 </head>
 
-<body class="bg-blue-50">
+<body class="bg-blue-50 dark:bg-blue-200">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
